changed images, fixed mobile close icon, fixed shop now buttons

--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/4659593a16.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="tops.css">
     <title>Document</title>
 </head>
 
 <body>
-<!-- navigation  -->
+    <!-- navigation  -->
     <nav>
         <div class="wrapper container">
             <div class="logo">
@@ -450,7 +453,7 @@
                     </span>
                 </li>
                 <ul class="cart">
-                   <span class="close-cart"><i class="fas fa-times"></i></span>
+                    <span class="close-cart"><i class="fas fa-times"></i></span>
                     <div class="cart-content">
                         <header> Shopping Cart
                         </header>
@@ -490,8 +493,8 @@
                     </div>
                     <div class="cart-footer">
                         <span class="total-price">
-                           <p>Total: <span>$90.99</span></p>
-                           
+                            <p>Total: <span>$90.99</span></p>
+
                         </span>
                         <span class="check-out">
                             <a href="">Check Out</a>
@@ -505,22 +508,44 @@
         </div>
     </nav>
 
-<!-- hero swiper section  -->
+    <!-- hero swiper section  -->
     <div class="hero">
         <div class="row">
             <div class="swiper-container hero-swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="/images/banner illustrations images/omar-prestwich-jLEGurepDco-unsplash.jpg" alt="">
+                        <img src="/images/hero/hero2.jpg" alt="">
                         <div class="content">
-
-                            <a href="">Shop Now</a>
+                            <a href="">Shop</a>
+                            <span>New Balance</span>
                         </div>
                     </div>
                     <div class="swiper-slide">
-                        <img src="/images/banner illustrations images/maxwell-nelson-NGWwHZeHNVE-unsplash.jpg" alt="">
+                        <img src="/images/hero/hero3.jpg" alt="">
                         <div class="content">
-                            <a href="">Shop Now</a>
+                            <a href="">Shop</a>
+                            <span>Converse</span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/hero/hero4.jpg" alt="">
+                        <div class="content">
+                            <a href="">Shop</a>
+                            <span>K-Swiss</span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/hero/hero5.jpg" alt="">
+                        <div class="content">
+                            <a href="">Shop</a>
+                            <span class="blk-text">Nike</span>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="/images/hero/hero6.jpg" alt="">
+                        <div class="content">
+                            <a href="">Shop</a>
+                            <span class="blk-text">Air Max</span>
                         </div>
                     </div>
                 </div>
@@ -530,7 +555,7 @@
         </div>
     </div>
 
-<section class="kids-section container">
+    <section class="kids-section container">
         <div class="title">
             <h2>Back To School Basics</h2>
         </div>
@@ -538,7 +563,16 @@
             <div class="gallery-container w-4 h-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="images/shoes/Nikes/air-max-women/air-max-90-shoe-wcrkW1.jpeg" alt="">
+                        <img src="/images/kids/kids-swiper/ben-white-lVCHfXn3VME-unsplash.jpg" alt="">
+                    </div>
+                    <div class="text">
+                    </div>
+                </div>
+            </div>
+            <div class="gallery-container w-2">
+                <div class="gallery-item">
+                    <div class="image">
+                        <img src="/images/kids/kids1.jpg" alt="">
                     </div>
                     <div class="text">
 
@@ -548,17 +582,7 @@
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="/images/shoes/adidas'/nmd-women/FW7691.png" alt="">
-                    </div>
-                    <div class="text">
-
-                    </div>
-                </div>
-            </div>
-            <div class="gallery-container w-2">
-                <div class="gallery-item">
-                    <div class="image">
-                        <img src="images/shoes/adidas'/gazelle-men/0000198763701_1__ap.jpeg" alt="">
+                        <img src="/images/kids/kids2.jpg" alt="">
                     </div>
                     <div class="text">
 
@@ -568,7 +592,7 @@
             <div class="gallery-container w-4">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="images/shoes/Nikes/jordans-men/nike-air-jordan-4-fire-red-feat1.jpeg" alt="">
+                        <img src="/images/kids/kids3.jpg" alt="">
                     </div>
                     <div class="text">
 
@@ -581,54 +605,55 @@
             <h1>Fall's the new summer</h1>
             <p>New Colors and new energy for starting fresh this school year</p>
         </div>
-</section>
-
-<footer>
-    <section class="footer-section container">
-        <div class="row">
-        <h3>Company</h3>
-            <ul>
-                <div>Our Partners</div>
-                <div>Careers</div>
-                <div>Policy</div>
-                <div>FAQ</div>
-            </ul>
-        </div>
-        <div class="row">
-            <h3>Get Help</h3>
-            <ul>
-                <div>Order Status</div>
-                <div>Shipping and Delivery</div>
-                <div>Return Policy</div>
-                <div>Payment Options</div>
-                <div>Gift Card Balance</div>
-            </ul>
-        </div>
-        <div class="row">
-            <h3>Company</h3>
-            <ul>
-                <div>Our Partners</div>
-                <div>Careers</div>
-                <div>Policy</div>
-                <div>FAQ</div>
-            </ul>
-        </div>
-        <div class="row">
-            <h3>Contact</h3>
-            <div>
-                <span><i class="fas fa-map-marker-alt"></i></span>  477 durham ridge drive Lilbut 30047 Georgia USA
-            </div>
-            <div>
-                <a href="mailto:dolapo_alli@icloud.com"><span><i class="far fa-envelope"></i></span> dolapo_alli@icloud.com</a>
-            </div>
-            <div>
-                <a href="tel:+14702900171"><span><i class="fas fa-phone"></i></span> 470-290-0171 </a>
-            </div>
-        </div>
     </section>
-</footer>
 
- <!-- swiperjs javascript cdn -->
+    <footer>
+        <section class="footer-section container">
+            <div class="row">
+                <h3>Company</h3>
+                <ul>
+                    <div>Our Partners</div>
+                    <div>Careers</div>
+                    <div>Policy</div>
+                    <div>FAQ</div>
+                </ul>
+            </div>
+            <div class="row">
+                <h3>Get Help</h3>
+                <ul>
+                    <div>Order Status</div>
+                    <div>Shipping and Delivery</div>
+                    <div>Return Policy</div>
+                    <div>Payment Options</div>
+                    <div>Gift Card Balance</div>
+                </ul>
+            </div>
+            <div class="row">
+                <h3>Company</h3>
+                <ul>
+                    <div>Our Partners</div>
+                    <div>Careers</div>
+                    <div>Policy</div>
+                    <div>FAQ</div>
+                </ul>
+            </div>
+            <div class="row">
+                <h3>Contact</h3>
+                <div>
+                    <span><i class="fas fa-map-marker-alt"></i></span> 477 durham ridge drive Lilburn Georgia 30047 USA
+                </div>
+                <div>
+                    <a href="mailto:dolapo_alli@icloud.com"><span><i class="far fa-envelope"></i></span>
+                        dolapo_alli@icloud.com</a>
+                </div>
+                <div>
+                    <a href="tel:+14702900171"><span><i class="fas fa-phone"></i></span> 470-290-0171 </a>
+                </div>
+            </div>
+        </section>
+    </footer>
+
+    <!-- swiperjs javascript cdn -->
     <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <!-- boxicon javascript cdn  -->
