fixed kids section image overscale

--- a/index.html
+++ b/index.html
@@ -562,9 +562,12 @@
         <div class="content">
             <div class="gallery-container w-4 h-2">
                 <div class="gallery-item">
-                    <div class="image">
-                        <img src="/images/kids/kids-swiper/ben-white-lVCHfXn3VME-unsplash.jpg" alt="">
-                    </div>
+                        <div class="swiper-container kids-swiper image">
+                            <div class="swiper-wrapper">
+                              <div class="swiper-slide"><img src="/images/kids/kids-swiper/ben-white-lVCHfXn3VME-unsplash.jpg" alt=""></div>
+                              <div class="swiper-slide"><img src="/images/kids/kids-swiper/my-networking-apparel-54VE0-oytqo-unsplash.jpg" alt=""></div>
+                            </div>
+                          </div>
                     <div class="text">
                     </div>
                 </div>
@@ -572,7 +575,7 @@
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="/images/kids/kids1.jpg" alt="">
+                        <img class="img-scale" src="/images/kids/kids1.jpg" alt="">
                     </div>
                     <div class="text">
 
@@ -582,7 +585,7 @@
             <div class="gallery-container w-2">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="/images/kids/kids2.jpg" alt="">
+                        <img class="img-scale" src="/images/kids/kids2.jpg" alt="">
                     </div>
                     <div class="text">
 
@@ -592,7 +595,7 @@
             <div class="gallery-container w-4">
                 <div class="gallery-item">
                     <div class="image">
-                        <img src="/images/kids/kids3.jpg" alt="">
+                        <img class="img-scale" src="/images/kids/kids3.jpg" alt="">
                     </div>
                     <div class="text">
 
